# portfolio

./: .gitignore  LICENSE  README.md  pyproject.toml  railway.json
src/portfolio/: __init__.py  app.py  project_details.json
src/portfolio/static/: style.css
src/portfolio/static/js/thomas_frank_tactics_tottenham/: figure1.js  figure2.js  figure3.js  figure4.js  figure5.js
src/portfolio/templates/: backup.html  base.html  footer.html  nav.html
src/portfolio/templates/pages/: home.html  home_old.html  project_page.html  projects.html  projects_old.html
src/portfolio/templates/pages/projects/: bigquery_ml_tableau.md  fantasy_football_power_rankings.md  portfolio_website.html  portfolio_website.md  project_template.html  thomas_frank_tactics_tottenham.md
src/portfolio/utils/: helpers.py
