[project]
name = "portfolio"
version = "0.3.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "ruff==0.6.9",
    "gunicorn==23.0.0",
    "flask-caching==2.3.0",
    "markdown==3.7",
    "python-frontmatter==1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]
