[project]
name = "portfolio"
version = "0.3.10"
description = "Portfolio site"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "ruff==0.6.9",
    "gunicorn==23.0.0",
    "flask-caching==2.3.0",
    "markdown==3.8.1",
    "python-frontmatter==1.1.0",
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
    "jinja2==3.1.6",
    "Werkzeug==3.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]
